--- a/lib/chatter_web/templates/layout/root.html.heex
+++ b/lib/chatter_web/templates/layout/root.html.heex
@@ -11,19 +11,14 @@
   </head>
   <body>
     <header>
-      <section class="container">
+    <section class="container">
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
+            <%= render "-user-menu.html", assigns %>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
+        <h1 style="color:blue;font-family: Times New Roman, Times, serif"> <i>ChatterApp </i></h1>
+    </section>
     </header>
     <%= @inner_content %>
   </body>
