--- a/lib/chatter_web/templates/session/new.html.heex
+++ b/lib/chatter_web/templates/session/new.html.heex
@@ -1,4 +1,5 @@
 <%= form_for @conn, Routes.session_path(@conn, :create), fn f -> %>
+<h3> Sign in </h3>
   <label>
     Email: <%= text_input f, :email %>
   </label>
