--- a/lib/chatter_web/templates/user/new.html.heex
+++ b/lib/chatter_web/templates/user/new.html.heex
@@ -1,4 +1,5 @@
 <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
+  <h1> Sign Up </h1>
   <label>
     Email: <%= text_input f, :email %>
     <%= error_tag f, :email %>
